www-miketrout-dev-deployment.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: www-miketrout-dev-deployment
  labels:
    app: www-miketrout-dev
    tier: frontend
spec:
  replicas: 3
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: www-miketrout-dev
      tier: frontend
  template:
    metadata:
      labels:
        app: www-miketrout-dev
        tier: frontend
    spec:
      containers:
        - name: www-miketrout-dev
          image: miketrout/www.miketrout.dev
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /healthz
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /healthz
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 15
          resources:
            requests:
              memory: 10Mi
              cpu: 10m
            limits:
              memory: 50Mi
              cpu: 50m
          ports:
            - containerPort: 80
