www-miketrout-dev-service.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: www-miketrout-dev-service
spec:
  type: NodePort
  selector:
    app: www-miketrout-dev
    tier: frontend
  ports:
    - name: service-port
      protocol: TCP
      port: 80
      targetPort: 80
