k8s.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: www-miketrout-dev-deployment
  labels:
    app: www-miketrout-dev
    tier: frontend
spec:
  replicas: 3
  revisionHistoryLimit: 1
  selector:
    matchLabels:
      app: www-miketrout-dev
      tier: frontend
  template:
    metadata:
      labels:
        app: www-miketrout-dev
        tier: frontend
    spec:
      containers:
        - name: www-miketrout-dev
          image: miketrout/www.miketrout.dev
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 15
          readinessProbe:
            httpGet:
              path: /
              port: 80
            initialDelaySeconds: 5
            periodSeconds: 15
          resources:
            requests:
              memory: 70Mi
              cpu: 70m
            limits:
              memory: 100Mi
              cpu: 100m
          ports:
            - containerPort: 80
---
apiVersion: v1
kind: Service
metadata:
  name: www-miketrout-dev-service
spec:
  type: NodePort
  selector:
    app: www-miketrout-dev
    tier: frontend
  ports:
    - name: service-port
      protocol: TCP
      port: 80
      targetPort: 80
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: www-miketrout-dev-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "www-miketrout-dev-static-ip"
    networking.gke.io/managed-certificates: "www-miketrout-dev-certificate"
spec:
  backend:
    serviceName: www-miketrout-dev-service
    servicePort: service-port
