www-miketrout-dev-ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
  name: www-miketrout-dev-ingress
  annotations:
    kubernetes.io/ingress.global-static-ip-name: "www-miketrout-dev-static-ip"
    networking.gke.io/managed-certificates: "www-miketrout-dev-certificate"
spec:
  backend:
    serviceName: www-miketrout-dev-service
    servicePort: 80
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: www-miketrout-dev-service
          servicePort: 80
      - path: /api/experience
        backend:
          serviceName: experience-service-service
          servicePort: 60000
